--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div>
         <div class="div-profile-img">
           <img
-            src="https://scontent.fpoj1-1.fna.fbcdn.net/v/t1.6435-9/85127222_2981679998530958_6402150363918499840_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=sApkTqFA2VAAX8ceYyN&_nc_ht=scontent.fpoj1-1.fna&oh=00_AT_cupTSPCP2TsoD1_r52QK596QLGH0yw3nytsZRSiZJAQ&oe=631A5904"
+            src="img/foto fundo branco.png"
             alt="profile img"
             class="profile-img"
           />
@@ -31,9 +31,12 @@
     </section>
     <section class="nav-section">
       <nav id="navbar" class="flex-center">
-        <a href="#welcome-section">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#info-section">Contact</a>
+        <p class="sub-heading">My portfolio</p>
+        <div>
+          <a href="#welcome-section">About</a>
+          <a href="#projects">Projects</a>
+          <a href="#info-section">Contact</a>
+        </div>
       </nav>
     </section>
     <section id="projects">
@@ -50,8 +53,8 @@
               src="https://i.im.ge/2022/08/12/OMJcjh.image.png"
               alt="omnifood image"
             />
-            <p class="project-tag">Omnifood project</p>
           </a>
+          <p class="project-tag">Omnifood project</p>
         </div>
         <div class="project-card">
           <a
@@ -63,8 +66,10 @@
               src="https://i.im.ge/2022/08/12/OMnN1P.image.png"
               alt="destino certo image"
             />
-            <p class="project-tag">Destino certo</p>
           </a>
+          <p class="project-tag">Destino certo</p>
+          <a class="project-tag code-tag" href="" target="_blank">Code</a>
+          <a class="project-tag code-tag" href="" target="_blank">Page</a>
         </div>
         <div class="project-card">
           <a
@@ -76,8 +81,8 @@
               src="https://i.im.ge/2022/08/12/OQdcvp.image.png"
               alt="bike landing page image"
             />
-            <p class="project-tag">Bike landing page</p>
           </a>
+          <p class="project-tag">Bike landing page</p>
         </div>
         <div class="project-card">
           <a
@@ -89,8 +94,8 @@
               src="https://i.im.ge/2022/08/12/OM4d0m.image.png"
               alt="guko tribute image"
             />
-            <p class="project-tag">Goku tribute</p>
           </a>
+          <p class="project-tag">Goku tribute</p>
         </div>
         <div class="project-card">
           <a
@@ -102,8 +107,8 @@
               src="https://i.im.ge/2022/08/12/OQoh4m.image.png"
               alt="basic html css image"
             />
-            <p class="project-tag">HTML & CSS fundamentals</p>
           </a>
+          <p class="project-tag">HTML & CSS fundamentals</p>
         </div>
         <div class="project-card">
           <a href="basic-survey-victorjrcandido.netlify.app" target="_blank">
@@ -112,8 +117,8 @@
               src="https://i.im.ge/2022/08/12/OQ7kFG.image.png"
               alt="basic survey image"
             />
-            <p class="project-tag">Survey form</p>
           </a>
+          <p class="project-tag">Survey form</p>
         </div>
       </div>
     </section>
